testdata/parser/negative/30.txt
Parse error at 30.pdl:6:13: Unresolved variable
    int z = z; // now allowed
            ^
